--- a/jstests/html/landing.html
+++ b/jstests/html/landing.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>KNet Test Suite</title>
   <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../../static/js/libs/jquery-2.0.0.js"></script>
+  <script src="../../static/js/libs/jquery.js"></script>
   <!-- Load local QUnit (grunt requires v1.0.0 or newer). -->
   <link rel="stylesheet" href="../libs/qunit-1.11.0.css" media="screen">
   <script src="../libs/qunit-1.11.0.js"></script>
