--- a/jstests/html/landing.html
+++ b/jstests/html/landing.html
@@ -8,7 +8,10 @@
   <!-- Load local QUnit (grunt requires v1.0.0 or newer). -->
   <link rel="stylesheet" href="../libs/qunit-1.11.0.css" media="screen">
   <script src="../libs/qunit-1.11.0.js"></script>
+  <script src="../libs/sinon-1.7.1.js"></script>
+  <script src="../libs/sinon-qunit-1.0.0.js"></script>
   <!-- Load local js. -->
+  <script src="../../static/js/plugins/jquery.form.js"></script>
   <script src="../../static/js/landing.js"></script>
   <!-- Load local tests. -->
   <script src="../landing.js"></script>
@@ -22,6 +25,12 @@
   <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture"></div>
+  <div id="qunit-fixture">
+    <ul id="test-messages"></ul>
+    <form class="test-form" method="POST">
+      <input type="email" name="test-email" class="test-email">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 </body>
 </html>
