add no_stories_msg when last story is removed

--- a/jstests/html/stories.html
+++ b/jstests/html/stories.html
@@ -11,7 +11,10 @@
   <script src="../libs/sinon-1.7.1.js"></script>
   <script src="../libs/sinon-qunit-1.0.0.js"></script>
   <!-- Load local js. -->
+  <script src="../../static/js/libs/handlebars.runtime.js"></script>
   <script src="../../static/js/plugins/jquery.form.js"></script>
+  <script src="../../static/js/jstemplates.js"></script>
+  <script src="../../static/js/app/handlebars_setup.js"></script>
   <script src="../../static/js/app/stories.js"></script>
   <!-- Load local tests. -->
   <script src="../stories.js"></script>
