add loadingOverlay for ajax actions

--- a/jstests/html/stories.html
+++ b/jstests/html/stories.html
@@ -13,6 +13,7 @@
   <!-- Load local js. -->
   <script src="../../static/js/libs/handlebars.runtime.js"></script>
   <script src="../../static/js/plugins/jquery.form.js"></script>
+  <script src="../../static/js/plugins/jquery.ajax-loading-overlay.js"></script>
   <script src="../../static/js/app/stories.js"></script>
   <script src="../../static/js/app/handlebars_setup.js"></script>
   <script src="../../static/js/jstemplates.js"></script>
