Workaround PhantomJS bug; use form-value class rather than textarea element name.

--- a/jstests/html/stories.html
+++ b/jstests/html/stories.html
@@ -43,8 +43,8 @@
     <div class="add-story">
       <input type="checkbox" id="story-form-toggle" checked>
       <form class="add-story-form" method="POST">
-        <textarea name="body" required id="id_body"></textarea>
-        <input type="checkbox" name="private" id="id_private">
+        <textarea name="body" required class="form-value" id="id_body"></textarea>
+        <input type="checkbox" name="private" class="form-value" id="id_private">
         <button class="primary-action" type="submit"></button>
       </form>
     </div>
