fix jstests; remove old selenium test

--- a/jstests/html/hbs_setup.html
+++ b/jstests/html/hbs_setup.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>KNet Test Suite</title>
   <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../../static/js/libs/jquery.js"></script>
+  <script src="../../static/js/vendor/jquery.js"></script>
   <!-- Load local QUnit (grunt requires v1.0.0 or newer). -->
-  <link rel="stylesheet" href="../libs/qunit-1.11.0.css" media="screen">
-  <script src="../libs/qunit-1.11.0.js"></script>
-  <script src="../libs/sinon-1.7.1.js"></script>
-  <script src="../libs/sinon-qunit-1.0.0.js"></script>
+  <link rel="stylesheet" href="../vendor/qunit.css" media="screen">
+  <script src="../vendor/qunit.js"></script>
+  <script src="../vendor/sinon.js"></script>
+  <script src="../vendor/sinon-qunit.js"></script>
   <!-- Load local js. -->
-  <script src="../../static/js/libs/handlebars.runtime.js"></script>
+  <script src="../../static/js/vendor/handlebars.runtime.js"></script>
   <script src="../../static/js/app/hbs_setup.js"></script>
   <script type="text/javascript">
     this['KNET'] = this['KNET'] || {};
