--- a/jstests/html/stories.html
+++ b/jstests/html/stories.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8">
   <title>KNet Test Suite</title>
   <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../../static/js/libs/jquery.js"></script>
+  <script src="../../static/js/vendor/jquery.js"></script>
   <!-- Load local QUnit (grunt requires v1.0.0 or newer). -->
-  <link rel="stylesheet" href="../libs/qunit-1.11.0.css" media="screen">
-  <script src="../libs/qunit-1.11.0.js"></script>
-  <script src="../libs/sinon-1.7.1.js"></script>
-  <script src="../libs/sinon-qunit-1.0.0.js"></script>
+  <link rel="stylesheet" href="../vendor/qunit.css" media="screen">
+  <script src="../vendor/qunit.js"></script>
+  <script src="../vendor/sinon.js"></script>
+  <script src="../vendor/sinon-qunit.js"></script>
   <!-- Load local js. -->
-  <script src="../../static/js/libs/handlebars.runtime.js"></script>
-  <script src="../../static/js/plugins/jquery.form.js"></script>
-  <script src="../../static/js/plugins/jquery.ajax-loading-overlay.js"></script>
+  <script src="../../static/js/vendor/handlebars.runtime.js"></script>
+  <script src="../../static/js/vendor/jquery.form.js"></script>
+  <script src="../../static/js/vendor/jquery.ajax-loading-overlay.js"></script>
   <script src="../../static/js/app/stories.js"></script>
+  <script src="../../static/js/app/jstemplates.js"></script>
   <script src="../../static/js/app/hbs_setup.js"></script>
-  <script src="../../static/js/jstemplates.js"></script>
   <!-- Load local tests. -->
   <script src="../stories.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
